<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_open"
        android:title="@string/menu_title_open"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_export"
        android:title="@string/menu_title_export"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_reload"
        android:title="@string/menu_title_reload"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_close"
        android:title="@string/menu_title_close"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_decyption_key"
        android:title="@string/menu_decryption_key"
        android:visible="false"
        app:showAsAction="never" />
</menu>
